@@ -1,3 +1,7 @@
+2010-12-29:
+ - More inspection test cases
+ - Bugfixes
+
 2010-12-28:
  - New inspection to convert a simple variable usage $a to the equivalent parameter expansion ${a}
  - New inspection to highlight unused parameter values for function calls
